--- a/src/my-app.html
+++ b/src/my-app.html
@@ -22,9 +22,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/google-signin/google-signin.html">
+<link rel="import" href="../bower_components/google-signin/google-signin-aware.html">
 <link rel="import" href="my-icons.html">
 
-<link rel="lazy-import" href="my-view1.html">
+<link rel="lazy-import" href="my-user-list.html">
 <link rel="lazy-import" href="my-view2.html">
 <link rel="lazy-import" href="my-view3.html">
 <link rel="lazy-import" href="my-view404.html">
@@ -71,46 +73,58 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
     </style>
-    <app-location route="{{route}}" url-space-regex="^[[rootPath]]"></app-location>
-    <app-route
-        route="{{route}}"
-        pattern="[[rootPath]]:page"
-        data="{{routeData}}"
-        tail="{{subroute}}"></app-route>
-    <app-drawer-layout fullbleed narrow="{{narrow}}">
-      <!-- Drawer content -->
-      <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
-        <app-toolbar>Menu</app-toolbar>
-        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="view1" href="[[rootPath]]view1">View One</a>
-          <a name="view2" href="[[rootPath]]view2">View Two</a>
-          <a name="view3" href="[[rootPath]]view3">View Three</a>
-          <a name="form" href="[[rootPath]]form">Form</a>
-        </iron-selector>
-      </app-drawer>
 
-      <!-- Main content -->
-      <app-header-layout has-scrolling-region>
-        <app-header slot="header" condenses reveals effects="waterfall">
-          <app-toolbar>
-            <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-            <div main-title>My App</div>
-          </app-toolbar>
-        </app-header>
-        <iron-pages
-            selected="[[page]]"
-            attr-for-selected="name"
-            fallback-selection="view404"
-            role="main">
-          <my-view1 name="view1"></my-view1>
-          <my-view2 name="view2"></my-view2>
-          <my-view3 name="view3"></my-view3>
-          <my-view404 name="view404"></my-view404>
-          <my-form name="form"></my-form>
+    <template is="dom-if" if="{{!isAuthorized}}" restamp>
+      <google-signin
+        client-id="352789647391-vq04b3va9ht4ie1ggig3r4crlfn8946r.apps.googleusercontent.com"
+        brand="google" width="wide"
+        is-authorized="{{isAuthorized}}"
+        hosted-domain="provectus.com"
+      ></google-signin>
+    </template>
+    <paper-icon-button class="red" icon="custom-icons:android" on-tap="_signIn">Sign In</paper-icon-button>
+    <template is="dom-if" if="{{isAuthorized}}" restamp>
+      <app-location route="{{route}}" url-space-regex="^[[rootPath]]"></app-location>
+      <app-route
+          route="{{route}}"
+          pattern="[[rootPath]]:page"
+          data="{{routeData}}"
+          tail="{{subroute}}"></app-route>
+      <app-drawer-layout fullbleed narrow="{{narrow}}">
+        <!-- Drawer content -->
+        <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
+          <app-toolbar>Menu</app-toolbar>
+          <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+            <a name="user-list" href="[[rootPath]]user-list">View One</a>
+            <a name="view2" href="[[rootPath]]view2">View Two</a>
+            <a name="view3" href="[[rootPath]]view3">View Three</a>
+            <a name="form" href="[[rootPath]]form">Form</a>
+          </iron-selector>
+        </app-drawer>
 
-        </iron-pages>
-      </app-header-layout>
-    </app-drawer-layout>
+        <!-- Main content -->
+        <app-header-layout has-scrolling-region>
+          <app-header slot="header" condenses reveals effects="waterfall">
+            <app-toolbar>
+              <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
+              <div main-title>My App</div>
+            </app-toolbar>
+          </app-header>
+          <iron-pages
+              selected="[[page]]"
+              attr-for-selected="name"
+              fallback-selection="view404"
+              role="main">
+            <my-user-list name="user-list"></my-view1>
+            <my-view2 name="view2"></my-view2>
+            <my-view3 name="view3"></my-view3>
+            <my-view404 name="view404"></my-view404>
+            <my-form name="form"></my-form>
+
+          </iron-pages>
+        </app-header-layout>
+      </app-drawer-layout>
+    </template>
   </template>
 
   <script>
@@ -123,6 +137,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             type: String,
             reflectToAttribute: true,
             observer: '_pageChanged',
+          },
+          isAuthorized: {
+            type: Boolean,
+            value: false
           },
           routeData: Object,
           subroute: String,
@@ -139,12 +157,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       _routePageChanged(page) {
+
+        if (!this.isAuthorized) return;
+
         // If no page was found in the route data, page will be an empty string.
         // Deault to 'view1' in that case.
-        this.page = page || 'view1';
+        this.page = page || 'user-list';
 
         // Close a non-persistent drawer when the page & route are changed.
-        if (!this.$.drawer.persistent) {
+        const drawer = this.$.drawer;
+        if (drawer && !drawer.persistent) {
           this.$.drawer.close();
         }
       }
@@ -161,6 +183,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       _showPage404() {
         this.page = 'view404';
+      }
+      _signIn() {
+        this.$.aware.signIn();
       }
     }
 
