--- a/src/my-app.html
+++ b/src/my-app.html
@@ -79,7 +79,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         client-id="352789647391-vq04b3va9ht4ie1ggig3r4crlfn8946r.apps.googleusercontent.com"
         brand="google" width="wide"
         is-authorized="{{isAuthorized}}"
-        hosted-domain="provectus.com"
+
       ></google-signin>
     </template>
     <paper-icon-button class="red" icon="custom-icons:android" on-tap="_signIn">Sign In</paper-icon-button>
@@ -89,7 +89,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           route="{{route}}"
           pattern="[[rootPath]]:page"
           data="{{routeData}}"
-          tail="{{subroute}}"></app-route>
+          tail="{{subroute}}">
+      </app-route>
       <app-drawer-layout fullbleed narrow="{{narrow}}">
         <!-- Drawer content -->
         <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
@@ -115,7 +116,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               attr-for-selected="name"
               fallback-selection="view404"
               role="main">
-            <my-user-list name="user-list"></my-view1>
+            <my-user-list name="user-list"></my-user-list>
             <my-view2 name="view2"></my-view2>
             <my-view3 name="view3"></my-view3>
             <my-view404 name="view404"></my-view404>
