--- a/src/my-form.html
+++ b/src/my-form.html
@@ -104,8 +104,8 @@
 //    constructor(){
 //	    super();
 //
-	  let form = document.getElementById('form')
-	  console.log(form)
+	  let form = document.getElementById('form');
+	  console.log(form);
 //    function submitForm() {
 //	    document.getElementById('iron-form').submit();
 //    }
