--- a/src/my-form.html
+++ b/src/my-form.html
@@ -62,7 +62,7 @@
 
 	</style>
 		<iron-icon icon="menu"></iron-icon>
-		<iron-icon icon="av:play-arrow"></iron-icon>
+		<iron-icon icon="album"></iron-icon>
 		<iron-icon icon="icons:account-balance"></iron-icon>
 		<iron-icon class="red" icon="custom-icons:play-arrow"></iron-icon>
 		<iron-icon icon="custom-icons:airplay"></iron-icon>
@@ -104,8 +104,8 @@
 //    constructor(){
 //	    super();
 //
-	  let form = document.getElementById('form');
-	  console.log(form);
+//	  let form = document.getElementById('form');
+//	  console.log(form);
 //    function submitForm() {
 //	    document.getElementById('iron-form').submit();
 //    }
