--- a/src/my-app.html
+++ b/src/my-app.html
@@ -7,7 +7,8 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<script src="https://cdn.jsdelivr.net/webcomponentsjs/0.7.24/webcomponents.min.js"></script>
+
+
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
@@ -19,195 +20,199 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../bower_components/iron-form/iron-form.html">
-<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="../bower_components/iron-icon">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+
+
+<!--my imports-->
+<!--<link rel="import" href="../bower_components/iron-form/iron-form.html">-->
+<!--<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">-->
 <link rel="import" href="../bower_components/google-signin/google-signin.html">
 <link rel="import" href="../bower_components/google-signin/google-signin-aware.html">
-<link rel="import" href="my-icons.html">
+<!--<link rel="import" href="../bower_components/iron-iconset-svg/iron-iconset-svg.html">-->
 
-<link rel="lazy-import" href="my-user-list.html">
-<link rel="lazy-import" href="my-view2.html">
-<link rel="lazy-import" href="my-view3.html">
-<link rel="lazy-import" href="my-view404.html">
-<link rel="lazy-import" href="my-form.html">
+<!--my imports-->
+
+<link rel="import" href="my-icons.html">
+<link rel="lazy-import" href="user-list.html">
+<link rel="lazy-import" href="test-page.html">
+<!--<link rel="lazy-import" href="my-view2.html">-->
+<!--<link rel="lazy-import" href="my-view3.html">-->
+<link rel="lazy-import" href="view-404.html">
+<!--<link rel="import" href="my-icons.html">-->
 
 <dom-module id="my-app">
-  <template>
-    <style>
-      :host {
-        --app-primary-color: #4285f4;
-        --app-secondary-color: black;
+	<template>
+		<style>
+			:host{
+				--app-primary-color:#4285F4;
+				--app-secondary-color:black;
+				display:block;
+			}
 
-        display: block;
-      }
+			app-drawer-layout:not([narrow]) [drawer-toggle]{
+				display:none;
+			}
 
-      app-drawer-layout:not([narrow]) [drawer-toggle] {
-        display: none;
-      }
+			app-header{
+				color:#FFF;
+				background-color:var(--app-primary-color);
+			}
 
-      app-header {
-        color: #fff;
-        background-color: var(--app-primary-color);
-      }
+			app-header paper-icon-button{
+				--paper-icon-button-ink-color:white;
+			}
 
-      app-header paper-icon-button {
-        --paper-icon-button-ink-color: white;
-      }
+			.drawer-list{
+				margin:0 20px;
+			}
 
-      .drawer-list {
-        margin: 0 20px;
-      }
+			.drawer-list a{
+				display:block;
+				padding:0 16px;
+				text-decoration:none;
+				color:var(--app-secondary-color);
+				line-height:40px;
+			}
 
-      .drawer-list a {
-        display: block;
-        padding: 0 16px;
-        text-decoration: none;
-        color: var(--app-secondary-color);
-        line-height: 40px;
-      }
-
-      .drawer-list a.iron-selected {
-        color: black;
-        font-weight: bold;
-      }
-
-    </style>
-
-    <template  is="dom-if" if="{{!isAuthorized}}" restamp>
-      <google-signin
-        client-id="352789647391-vq04b3va9ht4ie1ggig3r4crlfn8946r.apps.googleusercontent.com"
-        brand="google" width="wide"
-        is-authorized="{{isAuthorized}}"
-
-      ></google-signin>
-
-      <google-signin-aware
-        scopes="https://www.googleapis.com/auth/drive"
-        offline
-        on-google-signin-aware-success="_handleSignin"></google-signin-aware>
-
-    </template>
+			.drawer-list a.iron-selected{
+				color:black;
+				font-weight:bold;
+			}
+		</style>
+		<template is="dom-if" if="{{!isAuthorized}}" restamp>
+			<google-signin
+				client-id="352789647391-vq04b3va9ht4ie1ggig3r4crlfn8946r.apps.googleusercontent.com"
+				brand="google" width="wide"
+				is-authorized="{{isAuthorized}}"
+				hosted-domain=""
+			></google-signin>
+			<google-signin-aware
+				scopes="https://www.googleapis.com/auth/drive"
+				offline
+				on-google-signin-aware-success="_handleSignin"
+			></google-signin-aware>
+		</template>
 
 
+		<!--<paper-icon-button class="red" icon="custom-icons:android" on-tap="_signIn">Sign In</paper-icon-button>-->
+		<!--<iron-icon icon="my-icons:android"></iron-icon>-->
+		<template is="dom-if" if="{{isAuthorized}}" restamp>
+			<app-location route="{{route}}" url-space-regex="^[[rootPath]]"></app-location>
+			<app-route
+				route="{{route}}"
+				pattern="[[rootPath]]:page"
+				data="{{routeData}}"
+				tail="{{subroute}}"></app-route>
+			<app-drawer-layout fullbleed narrow="{{narrow}}">
+				<!-- Drawer content -->
+				<app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
+					<app-toolbar>Menu</app-toolbar>
+
+					<iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+
+						<a name="user-list" href="[[rootPath]]user-list">User List</a>
+						<a name="test-page" href="[[rootPath]]test-page">Test page</a>
+						<!--<a name="view2" href="[[rootPath]]view2">View Two</a>-->
+						<!--<a name="view3" href="[[rootPath]]view3">View Three</a>-->
+						<!--<a name="form" href="[[rootPath]]form">Form</a>-->
+					</iron-selector>
+				</app-drawer>
+				<!-- Main content -->
+				<app-header-layout has-scrolling-region>
+					<app-header slot="header" condenses reveals effects="waterfall">
+						<app-toolbar>
+							<paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
+							<div main-title>My App</div>
+							<google-signin ></google-signin>
+						</app-toolbar>
+					</app-header>
+					<iron-pages
+						selected="[[page]]"
+						attr-for-selected="name"
+						fallback-selection="view-404"
+						role="main">
+						<user-list name="user-list"></user-list>
+						<test-page name="test-page"></test-page>
+						<!--<my-view2 name="view2"></my-view2>-->
+						<!--<my-view3 name="view3"></my-view3>-->
+						<view-404 name="view-404"></view-404>
+						<!--<my-form name="form"></my-form>-->
+					</iron-pages>
+				</app-header-layout>
+			</app-drawer-layout>
+		</template>
+	</template>
+	<script>
 
 
-    <paper-icon-button class="red" icon="custom-icons:android" on-tap="_signIn">Sign In</paper-icon-button>
-    <template is="dom-if" if="{{isAuthorized}}" restamp>
-      <app-location route="{{route}}" url-space-regex="^[[rootPath]]"></app-location>
-      <app-route
-          route="{{route}}"
-          pattern="[[rootPath]]:page"
-          data="{{routeData}}"
-          tail="{{subroute}}">
-      </app-route>
-      <app-drawer-layout fullbleed narrow="{{narrow}}">
-        <!-- Drawer content -->
-        <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
-          <app-toolbar>Menu</app-toolbar>
-          <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-            <a name="user-list" href="[[rootPath]]user-list">View One</a>
-            <a name="view2" href="[[rootPath]]view2">View Two</a>
-            <a name="view3" href="[[rootPath]]view3">View Three</a>
-            <a name="form" href="[[rootPath]]form">Form</a>
-          </iron-selector>
-        </app-drawer>
+	  class MyApp extends Polymer.Element {
+		  static get is() {
+			  return 'my-app';
+		  }
 
-        <!-- Main content -->
-        <app-header-layout has-scrolling-region>
-          <app-header slot="header" condenses reveals effects="waterfall">
-            <app-toolbar>
-              <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-              <div main-title>My App</div>
-            </app-toolbar>
-          </app-header>
-          <iron-pages
-              selected="[[page]]"
-              attr-for-selected="name"
-              fallback-selection="view404"
-              role="main">
-            <my-user-list name="user-list"></my-user-list>
-            <my-view2 name="view2"></my-view2>
-            <my-view3 name="view3"></my-view3>
-            <my-view404 name="view404"></my-view404>
-            <my-form name="form"></my-form>
-          </iron-pages>
-        </app-header-layout>
-      </app-drawer-layout>
-    </template>
-  </template>
+		  static get properties() {
+			  return {
+				  page: {
+					  type: String,
+					  reflectToAttribute: true,
+					  observer: '_pageChanged',
+				  },
+				  isAuthorized: {
+					  type: Boolean,
+					  value: false
+				  },
+				  routeData: Object,
+				  subroute: String,
+				  // This shouldn't be neccessary, but the Analyzer isn't picking up
+				  // Polymer.Element#rootPath
+				  rootPath: String,
+			  };
+		  }
 
-  <script>
+//
+		  static get observers() {
+			  return [
+				  '_routePageChanged(routeData.page)',
+			  ];
+		  }
 
-    class MyApp extends Polymer.Element {
-      static get is() { return 'my-app'; }
+		  _routePageChanged(page) {
 
-      static get properties() {
-        return {
-          page: {
-            type: String,
-            reflectToAttribute: true,
-            observer: '_pageChanged',
-          },
-          isAuthorized: {
-            type: Boolean,
-            value: false
-          },
-          routeData: Object,
-          subroute: String,
-          // This shouldn't be neccessary, but the Analyzer isn't picking up
-          // Polymer.Element#rootPath
-          rootPath: String,
-        };
-      }
+			  if (!this.isAuthorized) return;
 
-      static get observers() {
-        return [
-          '_routePageChanged(routeData.page)',
-        ];
-      }
+			  // If no page was found in the route data, page will be an empty string.
+			  // Deault to 'view1' in that case.
 
-      _routePageChanged(page) {
+			  this.page = page || 'user-list';
 
-        if (!this.isAuthorized) return;
+			  // Close a non-persistent drawer when the page & route are changed.
+			  const drawer = this.$.drawer;
+			  if (drawer && !drawer.persistent) {
+				  this.$.drawer.close();
+			  }
+		  }
 
-        // If no page was found in the route data, page will be an empty string.
-        // Deault to 'view1' in that case.
-        this.page = page || 'user-list';
+		  _pageChanged(page) {
+			  // Load page import on demand. Show 404 page if fails
+			  var resolvedPageUrl = this.resolveUrl(page + '.html');
+			  Polymer.importHref(
+				  resolvedPageUrl,
+				  null,
+				  this._showPage404.bind(this),
+				  true);
+		  }
 
-        // Close a non-persistent drawer when the page & route are changed.
-        const drawer = this.$.drawer;
-        if (drawer && !drawer.persistent) {
-          this.$.drawer.close();
-        }
-      }
+		  _showPage404() {
+			  this.page = 'view-404';
+		  }
 
-      _pageChanged(page) {
-        // Load page import on demand. Show 404 page if fails
-        var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
-        Polymer.importHref(
-            resolvedPageUrl,
-            null,
-            this._showPage404.bind(this),
-            true);
-      }
+		  _handleSignin(response) {
+			  var user = gapi.auth2.getAuthInstance()['currentUser'].get();
+			  console.log(response);
+			  console.log('User name: ' + user.getBasicProfile().getName());
+		  }
+	  }
 
-      _showPage404() {
-        this.page = 'view404';
-      }
-      _signIn() {
-        this.$.aware.signIn();
-
-      }
-
-	    _handleSignin(response) {
-      	debugger
-		    var user = gapi.auth2.getAuthInstance()['currentUser'].get();
-		    console.log('User name: ' + user.getBasicProfile().getName());
-	    };
-    }
-
-    window.customElements.define(MyApp.is, MyApp);
-  </script>
+	  window.customElements.define(MyApp.is, MyApp);
+	</script>
 </dom-module>
