--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -12,103 +12,38 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- shared styles for all views -->
 <dom-module id="shared-styles">
-	<template>
-		<style>
-			.card{
-				margin:24px;
-				padding:16px;
-				color:#757575;
-				border-radius:5px;
-				background-color:#FFF;
-				box-shadow:0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-			}
+  <template>
+    <style>
+      .card {
+        margin: 24px;
+        padding: 16px;
+        color: #757575;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+      }
 
-			.circle{
-				display:inline-block;
-				width:64px;
-				height:64px;
-				text-align:center;
-				color:#555;
-				border-radius:50%;
-				background:#DDD;
-				font-size:30px;
-				line-height:64px;
-			}
+      .circle {
+        display: inline-block;
+        width: 64px;
+        height: 64px;
+        text-align: center;
+        color: #555;
+        border-radius: 50%;
+        background: #ddd;
+        font-size: 30px;
+        line-height: 64px;
+      }
 
-			h1{
-				margin:16px 0;
-				color:#212121;
-				font-size:22px;
-			}
+      h1 {
+        margin: 16px 0;
+        color: #212121;
+        font-size: 22px;
+      }
 
-			iron-form, paper-input, paper-dialog{
-				max-width:400px;
-				margin:auto;
-			}
-
-			iron-icon, div[suffix]{
-				color:hsl(0, 0%, 50%);
-				margin-right:12px;
-			}
-
-
-			paper-button.green {
-				background-color: var(--paper-green-500);
-				color: white;
-			}
-			paper-button.green[active] {
-				background-color: var(--paper-red-500);
-			}
-
-			paper-button.reset {
-				background-color: var(--google-red-500);
-				color: white;
-			}
-			paper-button.reset[active] {
-				background-color: var(--google-red-500);
-			}
-
-			.centered {
-				text-align: center;
-			}
-
-			iron-icon {
-				height: 64px;
-				width: 64px;
-				margin: auto 1em;
-
-			}
-			icon-play{
-				fill: orange;
-			}
-
-			iron-icon:nth-of-type(1) {
-				fill: orange;
-			}
-
-			iron-icon:nth-of-type(2) {
-				fill: green;
-			}
-
-			iron-icon:nth-of-type(3) {
-				fill: red;
-			}
-
-			iron-icon:nth-of-type(4) {
-				fill: red;
-			}
-
-			iron-icon {
-				transition: all 0.5s;
-				-webkit-transition: all 0.5s;
-			}
-
-			iron-icon:hover {
-				-webkit-filter: drop-shadow( 2px 2px 2px var(--google-grey-700) );
-				filter: drop-shadow( 2px 2px 2px var(--google-grey-700) );
-			}
-
-
-		</style>
-	</template>
+      iron-icon:hover{
+        fill: var(--google-yellow-700);
+      }
+    </style>
+  </template>
 </dom-module>
