--- a/src/user-data-service.html
+++ b/src/user-data-service.html
@@ -7,7 +7,7 @@
       auto
       method="get"
       url="[[apiEndPoint]]/rest/mock/users"
-      headers="ya29.GlvVBEgVB6Mz9GfrBuGyhJWw1jqPW4wplhRL1b21mBRWySG_XYdavOj3Jb1WUYrHBswmsHY1j95fMHbBhxdoam_88ZxMWGppp4_y9tyMsa8coiVCR4AYIqlJ8-qh"
+      headers={{headers}}
       handle-as="json"
       content-type="application/json"
       on-response="_handleResponse">
@@ -24,6 +24,14 @@
             type: String,
             value: 'http://proveng.cloud.provectus-it.com'
           },
+          customHeader: {
+            type: String,
+            value: "ya29.GlvVBEgVB6Mz9GfrBuGyhJWw1jqPW4wplhRL1b21mBRWySG_XYdavOj3Jb1WUYrHBswmsHY1j95fMHbBhxdoam_88ZxMWGppp4_y9tyMsa8coiVCR4AYIqlJ8-qh"
+          },
+          headers: {
+            type: String,
+            computed: '_getHeaders(customHeader)'
+          },
           data: {
             type: Array,
             notify: true
@@ -31,9 +39,15 @@
         }
       }
       _handleResponse(event) {
-        var response = event.detail.response;
+        let response = event.detail.response;
         this.data = JSON.parse(response.result);
         console.log(this.data);
+      }
+
+      _getHeaders(customHeader) {
+        let header = {"token": customHeader};
+        console.log(JSON.stringify(header));
+        return JSON.stringify(header);
       }
     }
     window.customElements.define(UserDataService.is, UserDataService);
