--- a/src/user-list.html
+++ b/src/user-list.html
@@ -14,7 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
 <link rel="import" href="shared-styles.html">
 
-<link rel="import" href="user-data-service.html">
+<link rel="import" href="user-data-provider.html">
 
 <dom-module id="user-list">
   <template>
@@ -25,7 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <user-data-service></user-data-service>
+    <user-data-provider></user-data-provider>
 
     <paper-card heading="Users list">
     <div class="card-content">
